# bat-notif

./: Cargo.toml  bat-notif.service  readme.md
src/: bat.rs  config.rs  main.rs  notif.rs
